mir/src/snapshots/transmute_mir__tests__struct_instantiation_and_access_with_generics.snap
---
source: mir/src/lib.rs
expression: mir
---
Ok(
    Mir {
        functions: [
            FunctionId(0) => Function {
                identifier: Identifier {
                    id: IdentId(4),
                    span: 3:13; [51, 52],
                },
                symbol_id: SymbolId(20),
                parameters: [],
                variables: {
                    SymbolId(23): Variable {
                        identifier: Identifier {
                            id: IdentId(5),
                            span: 4:17; [73, 74],
                        },
                        symbol_id: SymbolId(23),
                        type_id: TypeId(13),
                        expression: ExprId(1),
                        mutable: false,
                    },
                    SymbolId(24): Variable {
                        identifier: Identifier {
                            id: IdentId(6),
                            span: 5:17; [114, 115],
                        },
                        symbol_id: SymbolId(24),
                        type_id: TypeId(4),
                        expression: ExprId(3),
                        mutable: false,
                    },
                },
                body: Some(
                    ExprId(4),
                ),
                ret: TypeId(1),
                parent: Namespace(
                    NamespaceId(0),
                ),
            },
        ],
        structs: [
            StructId(1) => Struct {
                identifier: Identifier {
                    id: IdentId(1),
                    span: 2:16; [16, 22],
                },
                symbol_id: SymbolId(25),
                fields: Some(
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId(3),
                                span: 2:28; [28, 33],
                            },
                            index: 0,
                            symbol_id: SymbolId(26),
                            type_id: TypeId(4),
                        },
                    ],
                ),
                parent: Namespace(
                    NamespaceId(0),
                ),
            },
        ],
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "Struct",
            IdentId(2) => "T",
            IdentId(3) => "field",
            IdentId(4) => "f",
            IdentId(5) => "s",
            IdentId(6) => "v",
            IdentId(7) => "core",
            IdentId(8) => "add",
            IdentId(9) => "boolean",
            IdentId(10) => "div",
            IdentId(11) => "eq",
            IdentId(12) => "ge",
            IdentId(13) => "gt",
            IdentId(14) => "le",
            IdentId(15) => "lt",
            IdentId(16) => "mul",
            IdentId(17) => "neg",
            IdentId(18) => "neq",
            IdentId(19) => "number",
            IdentId(20) => "sub",
            IdentId(21) => "void",
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(
                            1,
                        ),
                        span: 4:37; [93, 94],
                    },
                ),
                span: 4:37; [93, 94],
                type_id: TypeId(4),
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: StructInstantiation(
                    SymbolId(25),
                    StructId(1),
                    [
                        (
                            SymbolId(26),
                            ExprId(0),
                        ),
                    ],
                ),
                span: 4:21; [77, 96],
                type_id: TypeId(13),
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: Literal(
                    Literal {
                        kind: Identifier(
                            SymbolId(23),
                        ),
                        span: 5:21; [118, 119],
                    },
                ),
                span: 5:21; [118, 119],
                type_id: TypeId(13),
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: Access(
                    ExprId(2),
                    SymbolId(26),
                ),
                span: 5:21; [118, 125],
                type_id: TypeId(4),
            },
            ExprId(4) => Expression {
                id: ExprId(4),
                kind: Block(
                    [
                        StmtId(2),
                        StmtId(3),
                        StmtId(6),
                    ],
                ),
                span: 3:17; [55, 136],
                type_id: TypeId(2),
            },
            ExprId(5) => Expression {
                id: ExprId(5),
                kind: Assignment(
                    Direct(
                        SymbolId(23),
                    ),
                    ExprId(1),
                ),
                span: 4:21; [77, 96],
                type_id: TypeId(13),
            },
            ExprId(6) => Expression {
                id: ExprId(6),
                kind: Assignment(
                    Direct(
                        SymbolId(24),
                    ),
                    ExprId(3),
                ),
                span: 5:21; [118, 125],
                type_id: TypeId(4),
            },
        ],
        statements: [
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: Expression(
                    ExprId(5),
                ),
                span: 4:13; [69, 97],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: Expression(
                    ExprId(6),
                ),
                span: 5:13; [110, 126],
            },
            StmtId(6) => Statement {
                id: StmtId(6),
                kind: Ret(
                    None,
                ),
                span: 0:0; [0, 0],
            },
        ],
        namespaces: [
            NamespaceId(0) => (
                None,
                IdentId(0),
            ),
            NamespaceId(1) => (
                Some(
                    NamespaceId(0),
                ),
                IdentId(7),
            ),
        ],
        symbols: [
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: NativeType(
                    IdentId(21),
                    Void,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(21),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: NativeType(
                    IdentId(19),
                    Number,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(19),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: NativeType(
                    IdentId(9),
                    Boolean,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(9),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: Native(
                    IdentId(20),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(20),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(18),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(8),
                ident_id: IdentId(18),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(18),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(9),
                ident_id: IdentId(18),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(17),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(10),
                ident_id: IdentId(17),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(16),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(8),
                ident_id: IdentId(15),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(8),
                ident_id: IdentId(14),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(8),
                ident_id: IdentId(13),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(8),
                ident_id: IdentId(12),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(8),
                ident_id: IdentId(11),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(9),
                ident_id: IdentId(11),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(10),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(8),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: LetFn(
                    [],
                    TypeId(1),
                ),
                type_id: TypeId(11),
                ident_id: IdentId(4),
            },
            SymbolId(23) => Symbol {
                id: SymbolId(23),
                kind: Let,
                type_id: TypeId(13),
                ident_id: IdentId(5),
            },
            SymbolId(24) => Symbol {
                id: SymbolId(24),
                kind: Let,
                type_id: TypeId(4),
                ident_id: IdentId(6),
            },
            SymbolId(25) => Symbol {
                id: SymbolId(25),
                kind: Struct,
                type_id: TypeId(13),
                ident_id: IdentId(1),
            },
            SymbolId(26) => Symbol {
                id: SymbolId(26),
                kind: Field(
                    IdentId(3),
                    0,
                ),
                type_id: TypeId(4),
                ident_id: IdentId(3),
            },
        ],
        types: [
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(7) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(8) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(9) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(10) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(11) => Function(
                [],
                TypeId(1),
            ),
            TypeId(13) => Struct(
                SymbolId(25),
                StructId(1),
            ),
        ],
    },
)
