mir/src/snapshots/transmute_mir__tests__struct_native.snap
---
source: mir/src/lib.rs
expression: make_mir(hir)
---
Ok(
    Mir {
        functions: [],
        structs: [
            StructId(0) => Struct {
                identifier: Identifier {
                    id: IdentId(1),
                    span: 1:35; [34, 35],
                },
                symbol_id: SymbolId(18),
                fields: None,
                parent: None,
            },
        ],
        identifiers: [
            IdentId(0) => "native",
            IdentId(1) => "S",
            IdentId(2) => "add",
            IdentId(3) => "boolean",
            IdentId(4) => "div",
            IdentId(5) => "eq",
            IdentId(6) => "ge",
            IdentId(7) => "gt",
            IdentId(8) => "le",
            IdentId(9) => "lt",
            IdentId(10) => "mul",
            IdentId(11) => "neg",
            IdentId(12) => "neq",
            IdentId(13) => "number",
            IdentId(14) => "sub",
            IdentId(15) => "void",
        ],
        expressions: [],
        statements: [
        ],
        symbols: [
            SymbolId(1) => Symbol {
                id: SymbolId(1),
                kind: NativeType(
                    IdentId(15),
                    Void,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(15),
            },
            SymbolId(2) => Symbol {
                id: SymbolId(2),
                kind: NativeType(
                    IdentId(13),
                    Number,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(13),
            },
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: NativeType(
                    IdentId(3),
                    Boolean,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(3),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(5),
                ident_id: IdentId(14),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(12),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(12),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(8),
                ident_id: IdentId(11),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(5),
                ident_id: IdentId(10),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(9),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(8),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(7),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(7),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(6),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(6),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(5),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(5),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(5),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(5),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(4),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(5),
                ident_id: IdentId(4),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(2),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(5),
                ident_id: IdentId(2),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Struct,
                type_id: TypeId(9),
                ident_id: IdentId(1),
            },
        ],
        types: [
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(6) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(7) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(8) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(9) => Struct(
                SymbolId(18),
                StructId(0),
            ),
        ],
    },
)
